@@ -9,7 +9,8 @@ char		*strtrim(char *);
 char		*mkstr (const char *format, ... );
 char		*strconcat (const char *str, ...);
 
-int		safe_strcmp(const char *s1, const char * s2);
+int		safe_strcmp(const char *s1, const char *s2);
+int		safe_strcoll(const char *s1, const char *s2);
 
 char		*my_getcwd();
 
